Iceberg: Spec-qualified partition statistics